# ai-rd-team

./: .gitignore  CHANGELOG.md  NEXT.md  README.md  RELEASING.md  pyproject.toml
.codebuddy-plugin/: marketplace.json
.github/workflows/: ci.yml
2026/: 2026-05-05-ai-rd-team.md
docs/: 01-getting-started.md  02-configuration.md  03-roles-and-team.md  04-skills.md  05-cost-control.md  06-bridge-and-auto-responder.md  07-artifact-placement.md  README.md
docs/follow-ups/: GLM51-compat.md
examples/: README.md
examples/01-smart-bookmark/: EXPECTED_OUTPUTS.md  README.md
examples/01-smart-bookmark/.ai-rd-team/: config.advanced.yaml
examples/02-blog-api/: EXPECTED_OUTPUTS.md  README.md
examples/02-blog-api/.ai-rd-team/: config.advanced.yaml  config.yaml
examples/03-todo-mini/: EXPECTED_OUTPUTS.md  README.md  REQUIREMENT.md
examples/03-todo-mini/.ai-rd-team/: config.advanced.yaml  config.yaml
examples/04-custom-skill/: EXPECTED_OUTPUTS.md  README.md  REQUIREMENT.md
examples/04-custom-skill/.ai-rd-team/: config.advanced.yaml  config.yaml
examples/04-custom-skill/.ai-rd-team/skills/: fastapi-routers.md  team-python-style.md
openspec/: config.yaml
openspec/changes/agent-d-auto-discovery/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-04-reduce-bridge-burden/: design.md  proposal.md  tasks.md
openspec/changes/reduce-bridge-burden/: proposal.md  tasks.md
openspec/changes/relocate-artifacts-to-root/: design.md  proposal.md  tasks.md
openspec/specs/: 2026-04-14-ai-rd-team-brainstorming.md  2026-05-04-multi-platform-brainstorming.md
openspec/specs/adapter-bridge-auto-responder/: spec.md
openspec/specs/design/: 00-overview.md  01-engine.md  02-adapter.md  03-service-api.md  04-web-panel.md  05-roles-skills.md  06-memory-system.md  07-artifacts.md  08-cost-control.md  09-hooks-security.md  10-config-schema.md  11-runtime-protocol.md  ROADMAP.md
plugins/ai-rd-team/.codebuddy-plugin/: plugin.json
plugins/ai-rd-team/skills/ai-rd-team-bridge/: SKILL.md
plugins/ai-rd-team/skills/ai-rd-team-launcher/: SKILL.md
prototype/: .gitignore  README.md  REPORT.md  VERIFICATION-PLAN.md
prototype/01-basic-team/: experiment.md
prototype/01-basic-team/results/: conclusion.md  conversation-log.md  metrics.yaml  observations.md
prototype/01-basic-team/results/artifacts/: calculator.py  design-note.md  test-results.txt  (+1 more)
prototype/01-basic-team/simulated/: team.py
prototype/02-skills-loading/: experiment.md
prototype/02-skills-loading/skills/: pytest-guide.md  python-coding-style.md
prototype/03-web-bridge/: decision.md  experiment.md  file-watch-approach.py  simple-http-callback.py
prototype/04-artifacts/: experiment.md
prototype/04-artifacts/results/: conclusion.md
prototype/04-artifacts/simulated/: concurrent_write.py
prototype/05-cost-baseline/: experiment.md
prototype/05-cost-baseline/results/: conclusion.md  token-counts.yaml  weight-calibration.md
prototype/M1-real-e2e/: REPORT.md  driver.py
prototype/M1-real-e2e/.ai-rd-team/: config.yaml
prototype/M2-real-e2e/: REPORT.md  driver.py
prototype/M2-real-e2e/.ai-rd-team/: config.advanced.yaml  config.yaml
prototype/M2-real-e2e/quota-home/: quota-history.jsonl
prototype/M3-real-e2e/: REPORT.md  driver.py
prototype/M3-real-e2e/.ai-rd-team/: config.yaml
prototype/M3-real-e2e/quota-home/: quota-history.jsonl
prototype/M4-example-e2e/: EXPECTED_OUTPUTS.md  README.md  REQUIREMENT.md  VERIFIED.md  driver.py
prototype/M4-example-e2e/.ai-rd-team/: config.advanced.yaml  config.yaml
prototype/M4-example-e2e/.ai-rd-team/runtime/artifacts/code/: README.md  pyproject.toml
prototype/M4-example-e2e/.ai-rd-team/runtime/artifacts/code/smart_bookmark/: __main__.py  models.py  store.py
prototype/M4-example-e2e/.ai-rd-team/runtime/artifacts/code/tests/: test_cli.py  test_store.py
prototype/M4-example2-e2e/: EXPECTED_OUTPUTS.md  README.md  REQUIREMENT.md  VERIFIED-m5.md  VERIFIED-v2-claude-wait600.md  VERIFIED.md  driver.py
prototype/M4-example2-e2e/.ai-rd-team/: config.advanced.yaml
prototype/M4-example2-e2e/quota-home/: quota-history.jsonl
prototype/shared/: artifact_recorder.py  metrics_collector.py  token_counter.py
skills/: README.md  ai-rd-team-launcher.md
src/ai_rd_team/: __init__.py
src/ai_rd_team/adapter/: __init__.py  auto_responder.py  base.py  bridge.py  bridge_simulator.py  codebuddy.py
src/ai_rd_team/artifacts/: __init__.py  layout.py  recorder.py
src/ai_rd_team/cli/: __init__.py  main.py
src/ai_rd_team/config/: __init__.py  inference.py  loader.py  models.py  onboarding.py  presets_loader.py
src/ai_rd_team/cost/: __init__.py  tracker.py
src/ai_rd_team/engine/: __init__.py  manager.py
src/ai_rd_team/hooks/: __init__.py  runner.py
src/ai_rd_team/memory/: __init__.py  manager.py
src/ai_rd_team/roles/: __init__.py  prompt.py  skills_loader.py
src/ai_rd_team/runtime/: __init__.py  state.py
src/ai_rd_team/service/: __init__.py  app.py  proxy.py  readers.py  static.py  streams.py  writers.py
src/ai_rd_team/skills/: __init__.py
src/ai_rd_team/utils/: __init__.py  file_ops.py
src/ai_rd_team/web/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_bridge_filebased.py  test_broadcast_and_scalable.py  test_cli_roles_skill.py  test_e2e_with_simulator.py  test_engine_and_cli.py  test_engine_cost.py  test_engine_hooks.py  test_engine_skills_memory.py  test_manager_auto_responder.py  test_manager_layout.py  test_presets_and_escalation.py  test_readers_bridge_pending.py  test_service_api.py  test_service_onboarding_and_budget_ack.py  test_service_sse.py  test_service_with_engine.py
tests/unit/: test_adapter_base.py  test_adapter_codebuddy.py  test_auto_responder.py  test_builtin_roles.py  test_config_inference.py  test_config_loader.py  test_config_models.py  test_config_onboarding.py  test_cost_tracker.py  test_file_ops.py  test_hooks_and_security.py  test_memory_manager.py  test_project_layout.py  test_prompt_renderer.py  test_recorder_layout.py  test_runtime_and_artifacts.py  test_skills_loader.py  test_smoke.py
(+147 files in other folders)
