[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-rd-team"
version = "0.1.0b1"
description = "Self-driven digital research team: a multi-agent collaboration framework for AI-assisted software development"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "eyjian", email = "eyjian@qq.com" },
]
maintainers = [
    { name = "eyjian", email = "eyjian@qq.com" },
]
keywords = [
    "ai",
    "agent",
    "multi-agent",
    "llm",
    "codebuddy",
    "claude",
    "team",
    "autonomous",
    "software-engineering",
    "code-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    # 配置与数据
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",        # 保留 YAML 注释（生成 advanced 配置时）
    "jsonschema>=4.20",

    # 文件监听
    "watchdog>=4.0",

    # CLI
    "typer>=0.12",
    "rich>=13.7",                # 终端美化（对话引导）

    # Web 服务（M3 启用；M1/M2 不强依赖）
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",        # SSE 支持
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",               # FastAPI TestClient 依赖
    "ruff>=0.4",
    "mypy>=1.9",
    "types-pyyaml",
    "types-jsonschema",
]
publish = [
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
ai-rd-team = "ai_rd_team.cli.main:app"

[project.urls]
Homepage = "https://github.com/eyjian/ai-rd-team"
Documentation = "https://github.com/eyjian/ai-rd-team/tree/main/docs"
Repository = "https://github.com/eyjian/ai-rd-team"
Changelog = "https://github.com/eyjian/ai-rd-team/blob/main/CHANGELOG.md"
Issues = "https://github.com/eyjian/ai-rd-team/issues"

# ===== Hatch =====
[tool.hatch.build.targets.wheel]
packages = ["src/ai_rd_team"]
# 显式带上非 .py 资源（preset YAML / builtin skills / web HTML）
# Hatchling 默认会包含 package 目录下所有文件，这里作为文档记录
include = [
    "src/ai_rd_team/**/*.py",
    "src/ai_rd_team/**/*.yaml",
    "src/ai_rd_team/**/*.md",
    "src/ai_rd_team/**/*.html",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.pytest_cache",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/ai_rd_team",
    "skills",
    "plugins",
    ".codebuddy-plugin",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.pytest_cache",
]

# ===== Ruff =====
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line-too-long（line-length 已处理）
    "B008",  # function call in default arg（FastAPI/Typer 需要）
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # 测试函数命名放宽

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== Mypy =====
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["watchdog.*", "sse_starlette.*"]
ignore_missing_imports = true

# ===== Pytest =====
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/ai_rd_team",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 慢速测试（真实文件/进程）",
]
asyncio_mode = "auto"

# ===== Coverage =====
[tool.coverage.run]
source = ["src/ai_rd_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
